--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>31 March 2008</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>thehanshal.github.io/MyPortfolio<span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 7249623676</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nagpur, Maharashtra</span></li>
                 </ul>
@@ -110,8 +110,9 @@
               </div>
             </div>
             <p>
-            I am a begginer at Web Developing.
-          <br> I,m learning C++ & PYTHON currently and will surely make some projects using them.
+            I am currently interested in photo editing
+        <br>If you wish, you can send me some photos at my gmail mentioned above
+        <br>and I'll resend you the edited one.
             </p>
           </div>
         </div>
@@ -148,9 +149,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Graphic Designing <i class="val">80%</i></span>
+              <span class="skill">Graphic Designing <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
